
- Ensuring that the package will work under R-2.15.3 (and older?) by
  modifying tests in discrimSim.Rd and ./inst/tests/test-links.R.

May 7th 2014 (version 1.4-0):

- Implementing support for the Degree-of-Difference method: dod,
  dod_fit, dodSim, dodPwr, dodControl, optimal_tau.

June 25th 2014 (version 1.4-1):

- Allowing negative d-primes in AUC.default (reported by Andreas
  Melzer June 25th 2014)

July 8th 2014 (version 1.4-1)

- Correcting formulae for beta-binomial and chance-corrected
  beta-binomial models in documentation (Thanks to Peter Nowee for
  reporting).
- Adding d.prime0 (value of d-prime under the null hypothesis) as an
  argument to discrim.

December 23rd 2014 (version 1.4-4)

- Coercing package title to title-case.
- Editing dodPwr() example to reduce computation time

January 21st 2015 (version 1.4-5)

- Updating Citation information per CRAN request.

March 2nd 2015 (version 1.4-6)

- Changing package maintainer from Rune H B Christensen to Per B
  Brockhoff.

July 16th 2015 (version 1.4-6)

-  submition to CRAN
-  cosmetic changes in NAMESPACE file:
             fixing warnings:  no visible global function definition
- in descrim.R and discrimR.R changed probit to "probit" in order to fix NOTES
  issues in CRAN check


March 14th 2016 (version 1.4-7)
- cosmetic changes in test-disrim_pd0.R due to new version of
  testthat package

August 24 2017 (version 1.5-0)
- new submission to CRAN with a number of additions
- new link functions 'twofive' (two out of five), 'twofiveF' (two out
  of five with forgiveness), and the 'hexad' have been implemented by
  Karolina Stachlewska.
- the so-called double methods have been implemented (initially) by
  Sophie Birot and ported to current sensR by Rune Christensen.

April 25 2018 (version 1.5-1)
- Adjust tests of dod: lower numerical tolerance and remove tests of warnings 
  that do not happen on all systems.
- Adding Url and BugReports fields to Description (https://github.com/perbrock/sensR)