@@ -1,8 +1,8 @@
 Package: sensR
 Type: Package
 Title: Thurstonian Models for Sensory Discrimination
-Version: 1.5-1
-Date: 2018-04-25
+Version: 1.5-2
+Date: 2020-02-10
 Authors@R: c(person(given="Rune Haubo Bojesen", family="Christensen",
 	   email="Rune@ChristensenStatistics.dk", role=c("aut")),
 	   person(given="Per Bruun", family="Brockhoff",
